--- a/MonBaluchon/View/Base.lproj/Main.storyboard
+++ b/MonBaluchon/View/Base.lproj/Main.storyboard
@@ -1,33 +1,131 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XdK-1L-1ZQ">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Traduction-->
+        <scene sceneID="Ag5-ki-5KP">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MonBaluchon" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="seM-3q-SX5" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Kv0-Or-fsi">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <viewLayoutGuide key="safeArea" id="SyZ-cA-6qA"/>
+                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Traduction" image="Translate" id="dYd-Ze-2Wm"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X0p-HZ-5wT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="14" y="103"/>
+            <point key="canvasLocation" x="803" y="1128"/>
+        </scene>
+        <!--Météo-->
+        <scene sceneID="RWo-DU-gdK">
+            <objects>
+                <viewController id="CtH-dv-Kxz" customClass="WhatWeatherViewController" customModule="MonBaluchon" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="B55-uN-BJ0">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gia-rc-Rsv">
+                                <rect key="frame" x="20" y="328" width="374" height="80"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="FKb-J0-EIP"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="getWeather:" destination="CtH-dv-Kxz" eventType="touchUpInside" id="cwA-SS-YLn"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="LSD-Gv-moV"/>
+                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="gia-rc-Rsv" firstAttribute="centerY" secondItem="B55-uN-BJ0" secondAttribute="centerY" id="0rm-H4-yzZ"/>
+                            <constraint firstItem="gia-rc-Rsv" firstAttribute="leading" secondItem="LSD-Gv-moV" secondAttribute="leading" constant="20" id="Fa5-ah-TNS"/>
+                            <constraint firstItem="LSD-Gv-moV" firstAttribute="trailing" secondItem="gia-rc-Rsv" secondAttribute="trailing" constant="20" id="sfL-15-yDn"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Météo" image="Sun" id="6fe-bE-PHi"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p9T-ms-8Oo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="803" y="-286"/>
+        </scene>
+        <!--Cours Devise-->
+        <scene sceneID="E09-un-229">
+            <objects>
+                <viewController id="JoN-AT-WME" customClass="ChangeValueViewController" customModule="MonBaluchon" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="012-7C-aBH">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="cqu-iL-7ft">
+                                <rect key="frame" x="20" y="20" width="374" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="Ge6-At-gN5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" textContentType="password"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g4K-iw-UwO">
+                                <rect key="frame" x="20" y="341" width="374" height="54"/>
+                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="SR1-M1-52u"/>
+                                </constraints>
+                                <state key="normal" title="Nouveau cours"/>
+                                <connections>
+                                    <action selector="getConversion:" destination="JoN-AT-WME" eventType="touchUpInside" id="37h-7B-mQC"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="y6O-lk-OnC"/>
+                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="g4K-iw-UwO" firstAttribute="leading" secondItem="y6O-lk-OnC" secondAttribute="leading" constant="20" id="Scq-7V-QZK"/>
+                            <constraint firstItem="g4K-iw-UwO" firstAttribute="centerY" secondItem="012-7C-aBH" secondAttribute="centerY" id="YQc-IA-I7w"/>
+                            <constraint firstItem="cqu-iL-7ft" firstAttribute="top" secondItem="y6O-lk-OnC" secondAttribute="top" constant="20" id="dER-3G-G5c"/>
+                            <constraint firstItem="y6O-lk-OnC" firstAttribute="trailing" secondItem="cqu-iL-7ft" secondAttribute="trailing" constant="20" id="fm9-CC-q1k"/>
+                            <constraint firstItem="cqu-iL-7ft" firstAttribute="leading" secondItem="y6O-lk-OnC" secondAttribute="leading" constant="20" id="j1T-X0-AM7"/>
+                            <constraint firstItem="y6O-lk-OnC" firstAttribute="trailing" secondItem="g4K-iw-UwO" secondAttribute="trailing" constant="20" id="mO4-sw-X9A"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Cours Devise" image="Dollar" id="fWZ-Ba-PHA"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0mj-bb-K08" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="802.89855072463774" y="469.56521739130437"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="c08-hp-OK5">
+            <objects>
+                <tabBarController id="XdK-1L-1ZQ" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="J6y-Tc-CZX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="JoN-AT-WME" kind="relationship" relationship="viewControllers" id="Dg4-rb-Lwo"/>
+                        <segue destination="seM-3q-SX5" kind="relationship" relationship="viewControllers" id="kIZ-gT-chW"/>
+                        <segue destination="CtH-dv-Kxz" kind="relationship" relationship="viewControllers" id="flg-FL-Jzw"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rne-oO-Rpe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-88" y="774"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="Dollar" width="25" height="25"/>
+        <image name="Sun" width="25" height="25"/>
+        <image name="Translate" width="25" height="25"/>
     </resources>
 </document>
