--- a/MonBaluchon/View/Base.lproj/Main.storyboard
+++ b/MonBaluchon/View/Base.lproj/Main.storyboard
@@ -28,20 +28,74 @@
                                     <action selector="tranlation:" destination="seM-3q-SX5" eventType="touchUpInside" id="ege-hg-7vH"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="translation" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sIH-WD-Pz1">
+                                <rect key="frame" x="20" y="74" width="374" height="120"/>
+                                <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="IvT-6c-NgN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to translate" textAlignment="justified" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="n7c-Xt-dD0">
+                                <rect key="frame" x="20" y="20" width="374" height="34"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="Jyj-xI-SGG"/>
+                                </constraints>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="seM-3q-SX5" id="XpY-tT-kWd"/>
+                                </connections>
+                            </textField>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="CbZ-DT-0SU">
+                                <rect key="frame" x="197" y="358" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="SyZ-cA-6qA"/>
                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="CbZ-DT-0SU" firstAttribute="centerY" secondItem="Kv0-Or-fsi" secondAttribute="centerY" id="Fme-Mv-pMu"/>
+                            <constraint firstItem="CbZ-DT-0SU" firstAttribute="centerX" secondItem="Kv0-Or-fsi" secondAttribute="centerX" id="JoR-F4-Fp2"/>
                             <constraint firstItem="SyZ-cA-6qA" firstAttribute="trailing" secondItem="HNs-xi-yBa" secondAttribute="trailing" constant="20" id="NYQ-6F-RXG"/>
+                            <constraint firstItem="sIH-WD-Pz1" firstAttribute="top" secondItem="n7c-Xt-dD0" secondAttribute="bottom" constant="20" id="SCk-w6-92W"/>
+                            <constraint firstItem="SyZ-cA-6qA" firstAttribute="trailing" secondItem="n7c-Xt-dD0" secondAttribute="trailing" constant="20" id="Wtj-UJ-FWM"/>
                             <constraint firstItem="HNs-xi-yBa" firstAttribute="centerY" secondItem="Kv0-Or-fsi" secondAttribute="centerY" id="btB-M7-EYK"/>
                             <constraint firstItem="HNs-xi-yBa" firstAttribute="leading" secondItem="SyZ-cA-6qA" secondAttribute="leading" constant="20" id="fTY-xL-XX8"/>
+                            <constraint firstItem="n7c-Xt-dD0" firstAttribute="leading" secondItem="SyZ-cA-6qA" secondAttribute="leading" constant="20" id="gWb-bw-M7V"/>
+                            <constraint firstItem="n7c-Xt-dD0" firstAttribute="top" secondItem="SyZ-cA-6qA" secondAttribute="top" constant="20" id="llY-RM-4Nf"/>
+                            <constraint firstItem="sIH-WD-Pz1" firstAttribute="leading" secondItem="SyZ-cA-6qA" secondAttribute="leading" constant="20" id="rAL-Md-mEq"/>
+                            <constraint firstItem="SyZ-cA-6qA" firstAttribute="trailing" secondItem="sIH-WD-Pz1" secondAttribute="trailing" constant="20" id="xE8-j0-Q3i"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="jMl-Ev-Ddw" appends="YES" id="d2Y-C8-iNX"/>
+                        </connections>
                     </view>
                     <tabBarItem key="tabBarItem" title="Traduction" image="Translate" id="dYd-Ze-2Wm"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="CbZ-DT-0SU" id="l1r-VO-gl2"/>
+                        <outlet property="buttonTranslation" destination="HNs-xi-yBa" id="dik-ck-JTA"/>
+                        <outlet property="textToTranslate" destination="n7c-Xt-dD0" id="BJh-S2-4Lq"/>
+                        <outlet property="translation" destination="sIH-WD-Pz1" id="na0-0E-gk7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X0p-HZ-5wT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="jMl-Ev-Ddw">
+                    <connections>
+                        <action selector="dismissKeyboard:" destination="seM-3q-SX5" id="Isl-2N-JwA"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="803" y="1128"/>
+            <point key="canvasLocation" x="802.89855072463774" y="1127.4456521739132"/>
         </scene>
         <!--Météo-->
         <scene sceneID="RWo-DU-gdK">
@@ -104,19 +158,69 @@
                                     <action selector="getConversion:" destination="JoN-AT-WME" eventType="touchUpInside" id="37h-7B-mQC"/>
                                 </connections>
                             </button>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uxw-IY-9cu">
+                                <rect key="frame" x="0.0" y="106" width="414" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="JoN-AT-WME" id="tCu-dP-i2j"/>
+                                    <outlet property="delegate" destination="JoN-AT-WME" id="NZe-PA-BM5"/>
+                                </connections>
+                            </pickerView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="DOI-KZ-lLN">
+                                <rect key="frame" x="187" y="348" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="DOI-KZ-lLN" secondAttribute="height" multiplier="1:1" id="Dmg-8k-Iwl"/>
+                                    <constraint firstAttribute="width" constant="40" id="oDi-uS-LJd"/>
+                                </constraints>
+                            </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Résultat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E0T-uq-mnX">
+                                <rect key="frame" x="20" y="508" width="374" height="30"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="z2K-0d-vfF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Résultat2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KVj-jE-6ge">
+                                <rect key="frame" x="20" y="563" width="374" height="30"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ipi-eM-ur0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="y6O-lk-OnC"/>
                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="g4K-iw-UwO" firstAttribute="leading" secondItem="y6O-lk-OnC" secondAttribute="leading" constant="20" id="Scq-7V-QZK"/>
+                            <constraint firstItem="KVj-jE-6ge" firstAttribute="top" secondItem="E0T-uq-mnX" secondAttribute="bottom" constant="25" id="TSm-xp-phk"/>
+                            <constraint firstItem="E0T-uq-mnX" firstAttribute="leading" secondItem="y6O-lk-OnC" secondAttribute="leading" constant="20" id="WEP-QJ-p4m"/>
+                            <constraint firstItem="y6O-lk-OnC" firstAttribute="trailing" secondItem="E0T-uq-mnX" secondAttribute="trailing" constant="20" id="WSH-cG-g8k"/>
                             <constraint firstItem="g4K-iw-UwO" firstAttribute="centerY" secondItem="012-7C-aBH" secondAttribute="centerY" id="YQc-IA-I7w"/>
+                            <constraint firstItem="DOI-KZ-lLN" firstAttribute="centerY" secondItem="012-7C-aBH" secondAttribute="centerY" id="bJf-HQ-ELd"/>
                             <constraint firstItem="cqu-iL-7ft" firstAttribute="top" secondItem="y6O-lk-OnC" secondAttribute="top" constant="20" id="dER-3G-G5c"/>
+                            <constraint firstItem="E0T-uq-mnX" firstAttribute="top" secondItem="g4K-iw-UwO" secondAttribute="bottom" constant="113" id="efO-l6-tLW"/>
                             <constraint firstItem="y6O-lk-OnC" firstAttribute="trailing" secondItem="cqu-iL-7ft" secondAttribute="trailing" constant="20" id="fm9-CC-q1k"/>
                             <constraint firstItem="cqu-iL-7ft" firstAttribute="leading" secondItem="y6O-lk-OnC" secondAttribute="leading" constant="20" id="j1T-X0-AM7"/>
                             <constraint firstItem="y6O-lk-OnC" firstAttribute="trailing" secondItem="g4K-iw-UwO" secondAttribute="trailing" constant="20" id="mO4-sw-X9A"/>
+                            <constraint firstItem="y6O-lk-OnC" firstAttribute="trailing" secondItem="KVj-jE-6ge" secondAttribute="trailing" constant="20" id="mhh-BK-mF8"/>
+                            <constraint firstItem="DOI-KZ-lLN" firstAttribute="centerX" secondItem="012-7C-aBH" secondAttribute="centerX" id="uN0-Oy-L82"/>
+                            <constraint firstItem="KVj-jE-6ge" firstAttribute="leading" secondItem="y6O-lk-OnC" secondAttribute="leading" constant="20" id="yQa-H7-CE0"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Cours Devise" image="Dollar" id="fWZ-Ba-PHA"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="DOI-KZ-lLN" id="T5D-qx-fBT"/>
+                        <outlet property="buttonCurrency" destination="g4K-iw-UwO" id="a87-05-rnT"/>
+                        <outlet property="currencyPickerView" destination="uxw-IY-9cu" id="H2y-hH-OGs"/>
+                        <outlet property="result" destination="E0T-uq-mnX" id="b28-iB-9jg"/>
+                        <outlet property="reverse" destination="KVj-jE-6ge" id="CnZ-Ee-IsL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0mj-bb-K08" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
